--- a/examples/nlp/ipynb/pretrained_word_embeddings.ipynb
+++ b/examples/nlp/ipynb/pretrained_word_embeddings.ipynb
@@ -3,7 +3,17 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bTw9dCPGdnL2"
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ayaalaswad/Devices-Project/blob/main/examples/nlp/ipynb/pretrained_word_embeddings.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Me5K_IxziEPX"
       },
       "source": [
         "# Using pre-trained word embeddings\n",
@@ -17,7 +27,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bjebEDaLdnL6"
+        "id": "JWj9X1_9iEPZ"
       },
       "source": [
         "## Setup"
@@ -25,9 +35,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "8tOYTOjgdnL8"
+        "id": "2kHmYw_oiEPb"
       },
       "outputs": [],
       "source": [
@@ -46,7 +56,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SlAg35NvdnMA"
+        "id": "rKa6rR_biEPd"
       },
       "source": [
         "## Introduction\n",
@@ -64,7 +74,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5dWGIqnDdnMB"
+        "id": "yqEVQH6JiEPe"
       },
       "source": [
         "## Download the Newsgroup20 data"
@@ -72,24 +82,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "id": "Kuo8lhEGdnMC",
-        "outputId": "659a6be7-fa43-47ac-e6dd-7e9058646db5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "UxolkroViEPf"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading data from http://www.cs.cmu.edu/afs/cs.cmu.edu/project/theo-20/www/data/news20.tar.gz\n",
-            "\u001b[1m17329808/17329808\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m32s\u001b[0m 2us/step\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "data_path = keras.utils.get_file(\n",
         "    \"news20.tar.gz\",\n",
@@ -101,7 +98,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "saCxVhLadnMD"
+        "id": "ehMwdnFViEPg"
       },
       "source": [
         "## Let's take a look at the data"
@@ -109,56 +106,11 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "data_path"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "oxOuSfZ0nQCs",
-        "outputId": "dda96c68-e474-4490-f6ad-2b8c59671c83",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "id": "ucoBT_fsiEPi"
       },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'/root/.keras/datasets/news20'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "HPV6PTMVdnMG",
-        "outputId": "27b715bc-86d4-4014-daa3-4d66af7d4666",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Number of directories: 20\n",
-            "Directory names: ['sci.crypt', 'sci.electronics', 'rec.sport.hockey', 'comp.graphics', 'rec.sport.baseball', 'talk.politics.guns', 'comp.sys.mac.hardware', 'rec.motorcycles', 'comp.windows.x', 'talk.politics.misc', 'talk.politics.mideast', 'alt.atheism', 'misc.forsale', 'talk.religion.misc', 'comp.os.ms-windows.misc', 'rec.autos', 'sci.med', 'comp.sys.ibm.pc.hardware', 'soc.religion.christian', 'sci.space']\n",
-            "Number of files in comp.graphics: 1000\n",
-            "Some example filenames: ['39054', '38744', '38319', '39049', '38889']\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "data_dir = pathlib.Path(data_path).parent / \"20_newsgroup\"\n",
         "dirnames = os.listdir(data_dir)\n",
@@ -171,104 +123,9 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "data_dir = pathlib.Path(data_path).parent / \"20_newsgroup\"\n",
-        "dirnames = os.listdir(data_dir)\n",
-        "print(\"Number of directories:\", len(dirnames))"
-      ],
-      "metadata": {
-        "id": "pluP7efMmsjV",
-        "outputId": "94bfe05d-39b4-45e8-9855-fb40211b3a66",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Number of directories: 20\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Directory names:\", dirnames)"
-      ],
-      "metadata": {
-        "id": "kxiQXRDXm2ts",
-        "outputId": "f271586d-d100-49ab-dcc5-832718eeb10d",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Directory names: ['sci.crypt', 'sci.electronics', 'rec.sport.hockey', 'comp.graphics', 'rec.sport.baseball', 'talk.politics.guns', 'comp.sys.mac.hardware', 'rec.motorcycles', 'comp.windows.x', 'talk.politics.misc', 'talk.politics.mideast', 'alt.atheism', 'misc.forsale', 'talk.religion.misc', 'comp.os.ms-windows.misc', 'rec.autos', 'sci.med', 'comp.sys.ibm.pc.hardware', 'soc.religion.christian', 'sci.space']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "fnames = os.listdir(data_dir / \"comp.graphics\")\n",
-        "print(\"Number of files in comp.graphics:\", len(fnames))"
-      ],
-      "metadata": {
-        "id": "eJdTR3hNm8Bc",
-        "outputId": "02020ae0-2d0f-4104-a29f-9ecfb1a8a22a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Number of files in comp.graphics: 1000\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(\"Some example filenames:\", fnames[:5])"
-      ],
-      "metadata": {
-        "id": "o0F12GCPnGTU",
-        "outputId": "c0f5da7c-d8a5-46b8-82e3-8fe14f988ec5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Some example filenames: ['39054', '38744', '38319', '39049', '38889']\n"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "-FP6o6bNdnMH"
+        "id": "lo9A6W_riEPj"
       },
       "source": [
         "Here's a example of what one file contains:"
@@ -276,41 +133,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
-        "id": "K8jJUoUMdnMJ",
-        "outputId": "8d8fb339-20fe-4f50-ed20-cc9c8b3c4e53",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "fKNXwKuXiEPk"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Newsgroups: comp.graphics\n",
-            "Path: cantaloupe.srv.cs.cmu.edu!das-news.harvard.edu!noc.near.net!howland.reston.ans.net!agate!dog.ee.lbl.gov!network.ucsd.edu!usc!rpi!nason110.its.rpi.edu!mabusj\n",
-            "From: mabusj@nason110.its.rpi.edu (Jasen M. Mabus)\n",
-            "Subject: Looking for Brain in CAD\n",
-            "Message-ID: <c285m+p@rpi.edu>\n",
-            "Nntp-Posting-Host: nason110.its.rpi.edu\n",
-            "Reply-To: mabusj@rpi.edu\n",
-            "Organization: Rensselaer Polytechnic Institute, Troy, NY.\n",
-            "Date: Thu, 29 Apr 1993 23:27:20 GMT\n",
-            "Lines: 7\n",
-            "\n",
-            "Jasen Mabus\n",
-            "RPI student\n",
-            "\n",
-            "\tI am looking for a hman brain in any CAD (.dxf,.cad,.iges,.cgm,etc.) or picture (.gif,.jpg,.ras,etc.) format for an animation demonstration. If any has or knows of a location please reply by e-mail to mabusj@rpi.edu.\n",
-            "\n",
-            "Thank you in advance,\n",
-            "Jasen Mabus  \n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(open(data_dir / \"comp.graphics\" / \"38987\").read())"
       ]
@@ -318,7 +145,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bySRuDLSdnMJ"
+        "id": "BBSswJRWiEPl"
       },
       "source": [
         "As you can see, there are header lines that are leaking the file's category, either\n",
@@ -328,44 +155,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
-        "id": "IEpoxoCZdnMK",
-        "outputId": "e52b232d-73ff-46db-e5e0-03f46b4dab73",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ScR0QheviEPl"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Processing alt.atheism, 1000 files found\n",
-            "Processing comp.graphics, 1000 files found\n",
-            "Processing comp.os.ms-windows.misc, 1000 files found\n",
-            "Processing comp.sys.ibm.pc.hardware, 1000 files found\n",
-            "Processing comp.sys.mac.hardware, 1000 files found\n",
-            "Processing comp.windows.x, 1000 files found\n",
-            "Processing misc.forsale, 1000 files found\n",
-            "Processing rec.autos, 1000 files found\n",
-            "Processing rec.motorcycles, 1000 files found\n",
-            "Processing rec.sport.baseball, 1000 files found\n",
-            "Processing rec.sport.hockey, 1000 files found\n",
-            "Processing sci.crypt, 1000 files found\n",
-            "Processing sci.electronics, 1000 files found\n",
-            "Processing sci.med, 1000 files found\n",
-            "Processing sci.space, 1000 files found\n",
-            "Processing soc.religion.christian, 997 files found\n",
-            "Processing talk.politics.guns, 1000 files found\n",
-            "Processing talk.politics.mideast, 1000 files found\n",
-            "Processing talk.politics.misc, 1000 files found\n",
-            "Processing talk.religion.misc, 1000 files found\n",
-            "Classes: ['alt.atheism', 'comp.graphics', 'comp.os.ms-windows.misc', 'comp.sys.ibm.pc.hardware', 'comp.sys.mac.hardware', 'comp.windows.x', 'misc.forsale', 'rec.autos', 'rec.motorcycles', 'rec.sport.baseball', 'rec.sport.hockey', 'sci.crypt', 'sci.electronics', 'sci.med', 'sci.space', 'soc.religion.christian', 'talk.politics.guns', 'talk.politics.mideast', 'talk.politics.misc', 'talk.religion.misc']\n",
-            "Number of samples: 19997\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "samples = []\n",
         "labels = []\n",
@@ -394,7 +188,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "g_BHObXVdnML"
+        "id": "rTQii4luiEPm"
       },
       "source": [
         "There's actually one category that doesn't have the expected number of files, but the\n",
@@ -404,7 +198,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "SbvylVfwdnML"
+        "id": "iI2C46lsiEPm"
       },
       "source": [
         "## Shuffle and split the data into training & validation sets"
@@ -412,9 +206,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
-        "id": "J7uVzbeydnML"
+        "id": "BDBQp473iEPm"
       },
       "outputs": [],
       "source": [
@@ -437,7 +231,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "k7RN8eUndnMM"
+        "id": "hrFlyF27iEPm"
       },
       "source": [
         "## Create a vocabulary index\n",
@@ -453,7 +247,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "qFBDFvt_dnMM"
+        "id": "MQpo6RiciEPm"
       },
       "outputs": [],
       "source": [
@@ -465,7 +259,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "TI5lTvqSdnMN"
+        "id": "C_vUyniBiEPm"
       },
       "source": [
         "You can retrieve the computed vocabulary used via `vectorizer.get_vocabulary()`. Let's\n",
@@ -476,7 +270,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6ciOuK3KdnMN"
+        "id": "xCNjCBwaiEPm"
       },
       "outputs": [],
       "source": [
@@ -486,7 +280,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ziEpFbRDdnMN"
+        "id": "3CKsgDigiEPn"
       },
       "source": [
         "Let's vectorize a test sentence:"
@@ -496,7 +290,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "_b0eOl8cdnMN"
+        "id": "PDRJ6qsViEPn"
       },
       "outputs": [],
       "source": [
@@ -507,7 +301,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "hLriLrBLdnMO"
+        "id": "HMtxlRn_iEPn"
       },
       "source": [
         "As you can see, \"the\" gets represented as \"2\". Why not 0, given that \"the\" was the first\n",
@@ -521,7 +315,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ULfhP-2EdnMO"
+        "id": "2B9i0Ac3iEPo"
       },
       "outputs": [],
       "source": [
@@ -532,7 +326,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "GQD5SLuGdnMP"
+        "id": "FEirXlA-iEPo"
       },
       "source": [
         "As you can see, we obtain the same encoding as above for our test sentence:"
@@ -542,7 +336,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Ya0IbnNBdnMP"
+        "id": "2kamPSk8iEPo"
       },
       "outputs": [],
       "source": [
@@ -553,7 +347,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "D75AhBErdnMP"
+        "id": "_xTB-kbZiEPo"
       },
       "source": [
         "## Load pre-trained word embeddings"
@@ -562,7 +356,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "izXsJ1XvdnMP"
+        "id": "5mQu4CaLiEPo"
       },
       "source": [
         "Let's download pre-trained GloVe embeddings (a 822M zip file).\n",
@@ -574,7 +368,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "tjzh_NqgdnMQ"
+        "id": "G54Dc2k_iEPo"
       },
       "outputs": [],
       "source": [
@@ -585,7 +379,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "LkGK1wwXdnMQ"
+        "id": "8goChATTiEPo"
       },
       "source": [
         "The archive contains text-encoded vectors of various sizes: 50-dimensional,\n",
@@ -598,7 +392,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "127NWG4OdnMQ"
+        "id": "oY0iRdTCiEPo"
       },
       "outputs": [],
       "source": [
@@ -617,7 +411,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7HQ1RSnAdnMQ"
+        "id": "wnSorbmviEPo"
       },
       "source": [
         "Now, let's prepare a corresponding embedding matrix that we can use in a Keras\n",
@@ -629,7 +423,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "JyLgdQWbdnMR"
+        "id": "GHY3N4tciEPo"
       },
       "outputs": [],
       "source": [
@@ -655,7 +449,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Bd-NbufxdnMR"
+        "id": "RzCEj2WQiEPp"
       },
       "source": [
         "Next, we load the pre-trained word embeddings matrix into an `Embedding` layer.\n",
@@ -668,7 +462,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "IFkH1aCEdnMS"
+        "id": "dQ-wXQMaiEPp"
       },
       "outputs": [],
       "source": [
@@ -686,7 +480,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pRnhISLqdnMT"
+        "id": "UPTXkmrAiEPp"
       },
       "source": [
         "## Build the model\n",
@@ -698,7 +492,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "LCF6zOQHdnMT"
+        "id": "pDpwbFU5iEPp"
       },
       "outputs": [],
       "source": [
@@ -720,7 +514,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pkFGi9r-dnMT"
+        "id": "YVl9kQJaiEPq"
       },
       "source": [
         "## Train the model\n",
@@ -733,7 +527,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "E3cxQKKYdnMU"
+        "id": "aedGYm2siEPq"
       },
       "outputs": [],
       "source": [
@@ -747,7 +541,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rpnIoQszdnMU"
+        "id": "B4DQw9RiiEPq"
       },
       "source": [
         "We use categorical crossentropy as our loss since we're doing softmax classification.\n",
@@ -758,7 +552,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0xpWaj28dnMe"
+        "id": "UU5jdEF_iEPx"
       },
       "outputs": [],
       "source": [
@@ -771,7 +565,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "l2MwYWpsdnMf"
+        "id": "QD9gk8yPiEPy"
       },
       "source": [
         "## Export an end-to-end model\n",
@@ -787,7 +581,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "CC0Mg8fZdnMf"
+        "id": "RF3ND9MkiEPy"
       },
       "outputs": [],
       "source": [
@@ -811,7 +605,8 @@
     "colab": {
       "name": "pretrained_word_embeddings",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
